concat media et content
